<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">故事流</string>
    <string name="login_title">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_back_text">返回</string>
    <string name="login_type_description">请选择以下账号登录：</string>
    <string name="sina_login">新浪微博登录</string>
    <string name="qq_login">腾讯QQ登录</string>
    <string name="baidu_login">百度账号登录</string>
    <string name="login_success">登录成功</string>
    <string name="story_flow_title">故事流</string>
    <string name="story_self_title">个人信息</string>
    <string name="story_home_tab">发现</string>
    <string name="story_camera_tab">拍照</string>
    <string name="story_self_tab">我</string>
    <string name="story_home_tab1">今日最热</string>
    <string name="story_home_tab2">本周最热</string>
    <string name="story_home_tab3">最新故事</string>
    <string name="self_pic_tab1">%s图片</string>
    <string name="self_story_flow_tab2">%s故事流</string>
    <string name="self_love_tab3">%s喜欢</string>
    <string name="btn_cancel_text">取消</string>
    <string name="btn_select_from_gallery">从相册中选择</string>
    <string name="btn_retake_picture">重拍</string>
    <string name="btn_use_picture">使用</string>
    <string name="btn_release_text">发布</string>
    <string name="btn_self_text">看自己</string>
    <string name="story_title_hint">故事主题</string>
    <string name="story_description_hint">对图片的描述</string>
    <string name="share_text_shareto">分享到：</string>
    <string name="make_thumbnail_loading">正在生成缩略图</string>
    <string name="btn_finish_text">完成</string>
    <string name="listview_header_view_text">开始一个新故事...</string>
    <string name="no_network_connection_toast">无法连接到网络,请检查网络配置</string>
    <string name="upload_pic_loading">正在发布,请稍后...</string>
    <string name="release_story_success">发布成功</string>
    <string name="release_story_failed">发布故事流失败,请稍后再试</string>
    <string name="release_story_title_is_null">故事标题不能为空</string>
    <string name="release_story_pic_exceed">图片大小不能超过2M,请重新选择~</string>
    <string name="self_setting">设置</string>
    <string name="data_load_failed_toast">数据加载失败</string>
    <string name="btn_camera_text">我拍</string>
    <string name="tab_pic_text">图片</string>
    <string name="tab_story_flow_text">故事流</string>
    <string name="tab_love_text">喜欢</string>
    <string name="btn_delete">删除</string>
    <string name="btn_share">分享到新浪微博</string>
    <string name="btn_share_qq">分享到腾讯微博</string>
    <string name="btn_baidu_save">分享到百度网盘</string>
    <string name="btn_unlike">喜欢</string>
    <string name="btn_liked">已喜欢</string>
    <string name="story_flow_starts">起始于 :</string>
    <string name="share_method_setting">分享设置：</string>
    <string name="setting_others">版权信息：</string>
    <string name="confirm_exit">确认退出故事流?</string>
    <string name="confirm_logout">确认退出当前账户?</string>
    <string name="ok_label">确定</string>
    <string name="cancel_label">取消</string>
    <string name="copyright_text">故事流 版权所有</string>
    <string name="net_name">www.gushiliu.com</string>
    <string name="exit_label">退出</string>
    <string name="share_bind">已绑定</string>
    <string name="share_unbind">未绑定</string>
    <string name="loading_waiting">内容加载中，请稍候...</string>
    <string name="data_is_null">暂无相关数据,快来发起一个故事吧~</string>
    <string name="operation_failed">操作失败,请稍候再试</string>
    <string name="share_failed">分享失败,请稍候再试</string>
    <string name="share_success">分享成功</string>
    <string name="like_success">已喜欢</string>
    <string name="delete_success">删除成功</string>
    <string name="unlike_success">已取消喜欢</string>
    <string name="operation_loading">操作中,请稍候...</string>
    <string name="save_success">保存成功</string>
    <string name="save_loading">保存中,请稍候...</string>
    <string name="share_loading">分享中,请稍候...</string>
    <string name="sina_status_text">用照片交流生活，分享你我的故事，我在@爱拍故事流 #%1$s#主题活动中上传了一张很有意思的照片，大家都来围观并积极参与吧！%2$s</string>
    <string name="qq_status_text">用照片交流生活，分享你我的故事，我在@gushiliu_com #%1$s#主题活动中上传了一张很有意思的照片，大家都来围观并积极参与吧！%2$s</string>
    <string name="search_story_title_hint_text">请输入故事标题</string>
    <string name="downloaded">下载</string>
    <string name="next_page_loading">正在加载下一页,请稍候...</string>
    <string name="last_page_loading">正在加载最后一页,请稍候...</string>
    <string name="camera_start_preview_failed">相机启动失败，请稍后重试</string>

</resources>