<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/tvStoryTitle"
            style="@style/title_text_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:text="@string/self_setting"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFinish"
            style="@style/public_right_button_Style"
            android:background="@drawable/btn_public"
            android:text="@string/btn_finish_text" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <!-- 分享方式 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/share_method_setting"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/shareToplayout"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/list_above_background"
                        android:clickable="true"
                        android:gravity="center_vertical" >

                        <ImageView
                            android:id="@+id/iv_sina"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:src="@drawable/icon_sina" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="right|center_vertical"
                            android:text="@string/sina_login"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp" >

                            <TextView
                                android:id="@+id/sina_bind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center_vertical"
                                android:text="@string/share_bind"
                                android:textColor="@color/tab_color"
                                android:textSize="16sp" />
                        </RelativeLayout>
                    </LinearLayout>
                    <!--
            <RelativeLayout
                android:id="@+id/shareMiddlelayout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/more_item_height"
                android:background="@drawable/list_middle_background"
                android:clickable="true" >
            </RelativeLayout>
                    -->

                    <LinearLayout
                        android:id="@+id/shareBottomlayout"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/list_below_background"
                        android:clickable="true"
                        android:gravity="center_vertical" >

                        <ImageView
                            android:id="@+id/iv_qq"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:src="@drawable/icon_qq" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="right|center_vertical"
                            android:text="@string/qq_login"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp" >

                            <TextView
                                android:id="@+id/qq_bind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center_vertical"
                                android:text="@string/share_unbind"
                                android:textColor="@color/tab_color"
                                android:textSize="16sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 其他说明 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/setting_others"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/shareToplayout"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/list_above_nor"
                        android:clickable="true"
                        android:gravity="center_vertical" >

                        <TextView
                            android:id="@+id/tvVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/app_name"
                            android:textColor="@color/tab_color"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shareMiddlelayout"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/list_mid_nor"
                        android:clickable="true"
                        android:gravity="center_vertical" >

                        <TextView
                            android:id="@+id/tvCopyright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/copyright_text"
                            android:textColor="@color/tab_color"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shareBottomlayout"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/more_item_height"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/list_below_nor"
                        android:clickable="true"
                        android:gravity="center_vertical" >

                        <TextView
                            android:id="@+id/tvothers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/net_name"
                            android:textColor="@color/link_name_color"
                            android:textSize="16dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="@drawable/btn_exit_selector"
                android:text="@string/exit_label"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>