<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/title_bg" >

            <Button
                android:id="@+id/btnCancel"
                style="@style/public_button_Style"
                android:background="@drawable/btn_public"
                android:text="@string/btn_cancel_text" />

            <Button
                android:id="@+id/btnRelease"
                style="@style/public_right_button_Style"
                android:background="@drawable/btn_public"
                android:text="@string/btn_release_text" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/share_img"
                    android:layout_width="128.0dip"
                    android:layout_height="128.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:padding="5.0dip"
                    android:src="@drawable/image" />
 <!-- android:background="@color/gray" -->

                <EditText
                    android:id="@+id/story_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:gravity="top"
                    android:hint="@string/story_title_hint"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/story_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:gravity="top"
                    android:hint="@string/story_description_hint"
                    android:lines="3"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tv_shareto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/share_text_shareto"
                        android:textColor="@color/black"
                        android:textSize="17.0sp" />

                    <ImageView
                        android:id="@+id/btn_share_sina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_toRightOf="@id/tv_shareto"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/icon_sina" />

                    <ImageView
                        android:id="@+id/btn_share_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_toRightOf="@id/btn_share_sina"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/icon_qq" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>