<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/tv_logo_name"
            style="@style/titlebar_home_text_style"
            android:paddingLeft="10dp"
            android:text="@string/story_flow_title" />
        <Button
            android:id="@+id/btn_register"
            style="@style/login_button_style"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15.0dip"
            android:background="@drawable/btn_public" 
            android:text="@string/btn_register" >
        </Button>

        <Button
            android:id="@+id/btn_login"
            style="@style/login_button_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/btn_public" 
            android:text="@string/login_title" >
        </Button>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="0.0dip" >

        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_gravity="center_horizontal"
                android:fadingEdge="none"
                android:fadingEdgeLength="0.0dp"
                android:paddingBottom="0.0dip"
                android:paddingLeft="0.0dip"
                android:paddingRight="0.0dip"
                android:paddingTop="0.0dip"
                android:tabStripEnabled="false" />
        </TabHost>
    </RelativeLayout>

</LinearLayout>