<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/title"
            style="@style/titlebar_text_style"
            android:text="@string/login_title"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBack"
            style="@style/back_button_Style"
            
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar"
         >

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_type_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/sinalayout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/more_item_height"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/list_above_background"
                android:clickable="true" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/iv_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:src="@drawable/icon_sina" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/sina_login"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/qqlayout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/more_item_height"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/list_middle_background"
                android:clickable="true" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/iv_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:src="@drawable/icon_qq" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/qq_login"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baidulayout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/more_item_height"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/list_below_background"
                android:clickable="true" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/iv_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:src="@drawable/icon_baidu" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/baidu_login"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>